--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -53,7 +53,9 @@
         <br />
         <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
         <br />
+        {% if user_annotation_count > 0 %}
         <form action="{% url 'export' col.pid volume.pid %}" class="button_to" method="GET"><div><input type="submit" value="Export" title="Export in a variety of formats"/>{% csrf_token %}</div></form>
+        {% endif %}
 <!-- 
         <p id="test"></p>
         <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
