larger Readux Logo for home page

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -25,7 +25,7 @@
     {% endif %}{% endfor %}
     {% else %}
     <meta property="og:title" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
-    <meta property="og:image" content="https://{{ request.META.HTTP_HOST }}/static/images/favicons/favicon.ico" />
+    <meta property="og:image" content="https://{{ request.META.HTTP_HOST }}/static/images/readux_logo.png" />
     <meta property="og:description" content="{{ page.tagline }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://readux.ecds.emory.edu" />
