--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -23,6 +23,7 @@
     <meta property="og:image" content="{{ page.social_media }}" />
     <meta property="og:image:secure_url" content="{{ page.social_media }}" />
     <meta property="twitter:image" content="{{ page.social_media }}" />
+    <meta property="og:image:width" content="600" />
     {% endif %}{% endfor %}
     {% else %}
     <meta property="og:title" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
