--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -39,7 +39,7 @@
     <meta property="og:url" content="https://readux.ecds.emory.edu" />
     {% endif %}
     <meta name="twitter:image:alt" content="Readux Logo - Emory Center for Digital scholarship - Read, Annotate, Publish" />
-    <meta name="og:site_name" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
+    <meta property="og:site_name" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@emorycds" />
     <meta name="twitter:creator" content="@emorycds" />
