--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -41,7 +41,7 @@
     {% endif %}
     <meta name="twitter:image:alt" content="Readux Logo - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta property="og:site_name" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@emorycds" />
     <meta name="twitter:creator" content="@emorycds" />
 
