--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -37,7 +37,7 @@
     <meta property="og:description" content="{{ page.tagline }}" />
     <meta name="twitter:description" content="{{ page.tagline }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://readux.ecds.emory.edu" />
+    <!--<meta property="og:url" content="https://readux.ecds.emory.edu" />-->
     {% endif %}
     <meta name="twitter:image:alt" content="Readux Logo - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta property="og:site_name" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
