twitter image src

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -29,6 +29,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     {% if "/cantaloupe/iiif/2" in page.social_media %}
     <meta name="twitter:image" content="{{ page.twitter_media1 }}"/>
+    <meta name="twitter:image:src" content="{{ page.twitter_media2 }}"/>
     {% else %}
     <meta name="twitter:image" content="{{ page.twitter_media2 }}" />
     {% endif %}
