--- a/apps/templates/export.html
+++ b/apps/templates/export.html
@@ -29,6 +29,11 @@
         <form action="{% url 'ManifestExport' 'v2' volume.pid %}" class="button_to" method="POST"><div><input type="submit" value="Export IIIF Bundle" title="Export volume and annotations as a IIIF bundle for preservation."/>{% csrf_token %}</div></form>
       </div>
 
+      <div class='uk-padding'>
+        <h3>Static Site Export</h3>
+        <p>Export volume and annotations as static digital edition.</p>
+        <form action="{% url 'JekyllExport' 'v2' volume.pid %}" class="button_to" method="POST"><div><input type="submit" value="Export Static Edition" title="Export volume and annotations as a static digital edition."/>{% csrf_token %}</div></form>
+      </div>
       <!-- start ocr el -->
       <div id='ocr' style='opacity: 0;'>
 
