fix repeating image on home page

--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -24,11 +24,12 @@
 
 <div class="uk-container">
 {% for volume in volumes %}
-<div><div id="grid"><div id="grid-image-volume">
+<div class="collection-row" style="display:inline-block;"><div class="collection-image" style="display:inline; float:left;">
   <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-    {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img src="{{ canvas.thumbnail }}" {% elif forloop.last %}<img src="{{ volume.canvas_set.first.thumbnail }}"{% endif %}{% endfor %} alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
+    <img src="{{ volume.canvas_set.first.thumbnail_crop_landscape }}"/>
   </a>
-  </div><div id="grid-metaforimage"><p>
+  </div>
+  <div class="collection-info" style="display:inline; float:left; max-width:80%;">
     <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
   {{ volume.label }}
 </a><br/>
