volume image repeat

--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -68,12 +68,12 @@
 <ol>
   {% for volume in page.volumes %}
   <li>
-    <div>{% for col in volume.collections.all %}
+    <div>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
         <img src="{{ volume.canvas_set.first.thumbnail_crop_landscape }}" alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
       </a>
       <p>
-      <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">{% endfor %}
+      <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
       <p>{{ volume.label }}</p>
   </a></p>
   <p>Author: {{volume.author}}</p>
