--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -7,15 +7,16 @@
 <h1 class='uk-heading-hero uk-text-center'>{{ page.title }}</h1>
 <h2 class='uk-heading-primary uk-text-center'>{{page.tagline}}</h2>
 <p class='uk-text-lead uk-text-center'>Log in to Readux to read digitized collections, make your own notes, and publish your marked-up edition online.</p>
-<ol>
-  {% for collection in collections %}
+<ul>
+  {% for collection in page.collections %}
   <li>
-    <div>
-        <a class="nav-link" href="{% url 'collection' collection.pid %}">
-          {{ collection.label }}
-        </a>
+    <div class="collectioncontainer">
+      <img src="media/{{collection.header}}" alt="Banner image for collection {{collection.label}}" style="width:90%;"/><br />
+        <div class="collection-label"><a class="nav-link" href="{% url 'collection' collection.pid %}"><span>
+          {{ collection.label }}<button>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</button>
+        </span></a></div>
     </div>
   </li>
   {% endfor %}
-</ol>
+</ul>
 {% endblock content %}
