--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -51,12 +51,11 @@
 <ul>
   {% for collection in page.collections %}
   <li>
-    <div>
-      <img src="media/{{collection.header}}" alt="Banner image for collection {{collection.label}}"/>
-        <a class="nav-link" href="{% url 'collection' collection.pid %}">
-          {{ collection.label }}
-        </a>
-        {{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}
+    <div class="collectioncontainer">
+      <img src="media/{{collection.header}}" alt="Banner image for collection {{collection.label}}" style="width:90%;"/><br />
+        <div class="collection-label"><a class="nav-link" href="{% url 'collection' collection.pid %}"><span>
+          {{ collection.label }}<button>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</button>
+        </span></a></div>
     </div>
   </li>
   {% endfor %}
