--- a/apps/templates/collections.html
+++ b/apps/templates/collections.html
@@ -3,15 +3,16 @@
 <h1 class='uk-heading-hero uk-text-center'>Readux</h1>
 <h2 class='uk-heading-primary uk-text-center'>Read. Annotate. Publish.</h2>
 <p class='uk-text-lead uk-text-center'>Log in to Readux to read digitized collections, make your own notes, and publish your marked-up edition online.</p>
-<ol>
+<ul>
   {% for collection in collections %}
   <li>
-    <div>
-        <a class="nav-link" href="{% url 'collection' collection.pid %}">
-          {{ collection.label }}
-        </a>
+    <div class="collectioncontainer">
+      <img src="/media/{{collection.header}}" alt="Banner image for collection {{collection.label}}" style="width:90%;"/><br />
+        <div class="collection-label"><a class="nav-link" href="{% url 'collection' collection.pid %}"><span>
+          {{ collection.label }}<button>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</button>
+        </span></a></div>
     </div>
   </li>
   {% endfor %}
-</ol>
+</ul>
 {% endblock content %}
