working on templates

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -227,6 +227,54 @@ header#page-bg .collection-image-info.collasped h3,
 header#page-bg .collection-image-info.collasped .info{
     display: none;
 }
+#wrap {
+   overflow: hidden;
+}
+#box {
+   width: 25%;
+   padding-bottom: 25%;
+   position: relative;
+   float: left;
+}
+#box a img {
+   width: 100%;
+   overflow: hidden;
+}
+#boxInner {
+   position: absolute;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   overflow: hidden;
+}
+#boxInner img {
+   #-webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+   #filter: blur(2px);
+   width: 100%;
+}
+#innerContent {
+   position: absolute;
+   left: 10px;
+   right: 10px;
+   top: 10px;
+   bottom: 10px;
+   text-align: center;
+   color: black;
+}
+
+#innerContent p {
+   text-align: center;
+   background: rgba(255, 255, 255, 0.7);
+   color: black;
+   border-radius: 15px;
+}
+
+#innerContent a {
+   color: #1C1F5D;
+   #background: rgba(255, 255, 255, 0.7);
+   text-decoration: underline;
+}
 
 @media (max-width:1095px){
 header#page-bg .collection-label h1 {
@@ -248,4 +296,31 @@ header#page-bg .collection-label h1 {
     font-size: 0.7em;
 }
 }
-
+@media only screen and (max-width : 480px) {
+   /* Smartphone view: 1 tile */
+   #box {
+      width: 100%;
+      padding-bottom: 100%;
+   }
+}
+@media only screen and (max-width : 650px) and (min-width : 481px) {
+   /* Tablet view: 2 tiles */
+   #box {
+      width: 50%;
+      padding-bottom: 50%;
+   }
+}
+@media only screen and (max-width : 1050px) and (min-width : 651px) {
+   /* Small desktop / ipad view: 3 tiles */
+   #box {
+      width: 33.3%;
+      padding-bottom: 33.3%;
+   }
+}
+@media only screen and (max-width : 1290px) and (min-width : 1051px) {
+   /* Medium desktop: 4 tiles */
+   #box {
+      width: 25%;
+      padding-bottom: 25%;
+   }
+}
