--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -7,22 +7,21 @@
 <h1 class='uk-heading-hero uk-text-center'>{{ page.page_title }}</h1>
 <h2 class='uk-heading-primary uk-text-center'>{{page.tagline}}</h2>
 <p class='uk-text-lead uk-text-center'>{{ page.page_text }}</p>
-<ul>
+  <div id="wrap">
   {% for volume in page.volumes %}
-  <li>
-    <div>
+    <div id="box">
+    <div id="boxInner">
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-        <img src="{{ volume.canvas_set.first.thumbnail_crop_landscape }}" alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';"/>
+        <img src="{{ volume.canvas_set.first.thumbnail_crop_volume }}" alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static '/images/image_not_found.jpg' %}';"/>
       </a>
-      <p>
+      <div id="innerContent"><p>
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
       <p>{{ volume.label }}</p>
   </a></p>
   <p>Author: {{volume.author}}</p>
   <p>Date Published: {{volume.published_date}}</p>
-  <p>Added {{volume.created_at}}</p>
-    </div>
-  </li>
+  <p>Added {{volume.created_at}}</p></div>
+    </div></div>
   {% endfor %}
-</ul>
+  </div>
 {% endblock content %}
