--- a/apps/templates/volumes.html
+++ b/apps/templates/volumes.html
@@ -8,6 +8,10 @@
 <h1 class='uk-heading-hero uk-text-center'>Readux</h1>
 <h2 class='uk-heading-primary uk-text-center'>Read. Annotate. Publish.</h2>
 <p class='uk-text-lead uk-text-center'>Log in to Readux to read digitized collections, make your own notes, and publish your marked-up edition online.</p>
+
+{% include "snippets/sort_dropdown.html" %}
+
+
   <div id="wrap">
   {% for volume in volumes %}
     <div id="box">
