--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1 class='uk-heading-hero uk-text-center'>{{ page.page_title }}</h1>
 <h2 class='uk-heading-primary uk-text-center'>{{page.tagline}}</h2>
-<p class='uk-text-lead uk-text-center'>{{ page.page_text }}</p>
+<p class='uk-text-lead uk-text-center'>{{ page.paragraph }}</p>
 <div>
 <ul>
   {% for collection in page.collections %}
