--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -7,13 +7,13 @@
 <h1 class='uk-heading-hero uk-text-center'>{{ page.page_title }}</h1>
 <h2 class='uk-heading-primary uk-text-center'>{{page.tagline}}</h2>
 <p class='uk-text-lead uk-text-center'>{{ page.paragraph }}</p>
-<div>
+<div class="collectionswrapper">
 <ul>
   {% for collection in page.collections %}
   <li>
   <div class="collectionbox">
     <div class="collectioncontainer">
-      <img src="/media/{{collection.header}}" alt="Banner image for collection {{collection.label}}" style="width:100%;"/><br />
+      <img src="/media/{{collection.header}}" alt="Banner image for collection {{collection.label}}""/><br />
         <div class="collection-label"><a class="nav-link" href="{% url 'collection' collection.pid %}"><span>
           {{ collection.label }}<button>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</button>
         </span></a></div>
