--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -151,10 +151,16 @@ header#page-bg .collection-label h1 {
     display: flex;
 }
 
+.collectionswrapper > ul {
+   padding-left: 0;
+}
+
 ul > li > .collectionbox {
    width: 100%;
    padding-bottom: 15%;
    position: relative;
+   border: 1px;
+   border-style: solid;
 }
 
 ul > li > .collectionbox > .collectioncontainer {
@@ -163,6 +169,11 @@ ul > li > .collectionbox > .collectioncontainer {
    right: 0;
    top: 0;
    bottom: 0;
+   overflow: hidden;
+}
+
+ul > li > .collectionbox > .collectioncontainer img {
+   width: 100%;
    overflow: hidden;
 }
 
@@ -176,7 +187,7 @@ ul > li > .collectionbox > .collectioncontainer > .collection-label a.nav-link {
     position: absolute;
     left: 10px;
     right: 10px;
-    top: 25%;
+    top: 30%;
     bottom: 10px;
     text-align: center;
     color: black;
