--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -5,8 +5,8 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<h1 class='uk-heading-hero uk-text-center'>{{ page.page_title }}</h1>
-<h2 class='uk-heading-primary uk-text-center'>{{page.tagline}}</h2>
+<h2 class='uk-heading-primary uk-text-center'>{{ page.page_title }}</h1>
+<h3 class='uk-text-center'>{{page.tagline}}</h2>
 <p class='uk-text-lead uk-text-center'>{{ page.paragraph }}</p>
 
 {% include "snippets/sort_dropdown.html" %}
