--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -158,6 +158,12 @@ header#page-bg .collection-label h1 {
    padding-left: 0;
 }
 
+ol {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+}
+
 ul > li > .collectionbox {
    width: 100%;
    padding-bottom: 15%;
@@ -200,6 +206,20 @@ ul > li > .collectionbox > .collectioncontainer > .collection-label a.nav-link s
     background-color: rgba(255, 255, 255, 0.62);
     padding: 0.3em;
     border-radius: 20px;
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: 225px auto;
+}
+
+#grid-image {
+    display: grid;
+    margin-bottom: 10px;
+}
+
+#grid-metaforimage {
+    display: grid;
 }
 
 .uk-container ul {
@@ -277,11 +297,27 @@ header#page-bg .collection-image-info.collasped .info{
    bottom: 0;
    overflow: hidden;
 }
+#boxInnerb {
+   position: absolute;
+   left: 0;
+   right: 0;
+   top: 0;
+   bottom: 0;
+   max-height: 225px;
+   overflow: hidden;
+}
 #boxInner img {
    #-webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
    #filter: blur(2px);
    width: 100%;
 }
+
+#boxInnerb img {
+   #-webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
+   #filter: blur(2px);
+   width: 100%;
+}
+
 #innerContent {
    position: absolute;
    left: 10px;
@@ -304,6 +340,33 @@ header#page-bg .collection-image-info.collasped .info{
 }
 
 #innerContent a {
+   color: black;
+   #background: rgba(255, 255, 255, 0.7);
+   text-decoration: underline;
+}
+
+#innerContentb {
+   position: absolute;
+   left: 10px;
+   right: 10px;
+   top: 10px;
+   bottom: 10px;
+   text-align: center;
+   color: black;
+}
+
+#innerContentb h2 {
+   text-align: center;
+   background: rgba(255, 255, 255, 0.7);
+   color: #4F4F4F;
+   border-radius: 15px;
+}
+
+#innerContentb h2 em {
+   color: black;
+}
+
+#innerContentb a {
    color: black;
    #background: rgba(255, 255, 255, 0.7);
    text-decoration: underline;
@@ -380,5 +443,12 @@ ul > li > .collectionbox > .collectioncontainer > .collection-label a.nav-link {
    /* Smartphone view: 1 tile */
 ul > li > .collectionbox > .collectioncontainer > .collection-label a.nav-link {
     font-size: 1em;
+}
+}
+@media only screen and (max-width : 1250px) {
+ol {
+  columns: 1;
+  -webkit-columns: 1;
+  -moz-columns: 1;
 }
 }
